--- a/HealthSphere_Frontend/package.json
+++ b/HealthSphere_Frontend/package.json
@@ -16,10 +16,12 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.428.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
